--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 bughound_api/venv
-*__pycache__
+bughound_webapp/node_modules
+bughound_api/venv
+
+
+# System Files
+.DS_Store
+Thumbs.db
+__pycache__
+
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
