--- a/bughound_api/requirements.txt
+++ b/bughound_api/requirements.txt
@@ -6,3 +6,5 @@ djangorestframework==3.9.1
 djangorestframework-jwt==1.11.0
 mysqlclient==1.4.1
 Pillow==5.4.1
+django-filter==2.1.0
+djangorestframework-filters==0.10.2.post0
