--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -13,18 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.4",
+    "@angular/animations": "^7.2.6",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "7.2.4",
     "@angular/compiler": "7.2.4",
     "@angular/core": "7.2.4",
     "@angular/forms": "7.2.4",
     "@angular/http": "7.2.4",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "7.2.4",
     "@angular/platform-browser-dynamic": "7.2.4",
     "@angular/router": "7.2.4",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "@ng-select/ng-select": "^2.15.3",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.30.13",
+    "angular2-moment": "^1.9.0",
     "animate.css": "^3.7.0",
     "arrive": "2.4.1",
     "bootstrap": "3.3.7",
@@ -33,10 +42,13 @@
     "core-js": "2.5.7",
     "googleapis": "33.0.0",
     "jquery": "3.3.1",
+    "moment": "^2.24.0",
+    "ng-select2": "^1.0.8",
     "ngx-toastr": "^9.1.2",
     "perfect-scrollbar": "^1.4.0",
     "rxjs": "6.4.0",
     "rxjs-compat": "6.3.2",
+    "select2": "^4.0.6-rc.1",
     "tslib": "^1.9.0",
     "zone.js": "0.8.29"
   },
@@ -52,9 +64,9 @@
     "karma": "3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.3.1",
-    "karma-coverage-istanbul-reporter": "2.0.4",
     "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
