--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -43,6 +43,8 @@
     "googleapis": "33.0.0",
     "jquery": "3.3.1",
     "moment": "^2.24.0",
+    "ng-bootstrap-to-bootstrap-3": "^0.7.0",
+    "ng-pick-datetime": "^7.0.0",
     "ng-select2": "^1.0.8",
     "ngx-cookie-service": "^2.1.0",
     "ngx-toastr": "^9.1.2",
