--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -47,6 +47,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ng-select2": "^1.0.8",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-mat-select-search": "^1.6.0",
     "ngx-toastr": "^9.1.2",
     "perfect-scrollbar": "^1.4.0",
     "rxjs": "6.4.0",
