--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -49,6 +49,7 @@
     "ngx-cookie-service": "^2.1.0",
     "ngx-mat-select-search": "^1.6.0",
     "ngx-toastr": "^9.1.2",
+    "ngx-uploader": "^7.1.0",
     "perfect-scrollbar": "^1.4.0",
     "rxjs": "6.4.0",
     "rxjs-compat": "6.3.2",
