--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -40,6 +40,7 @@
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.0",
     "core-js": "2.5.7",
+    "file-saver": "^2.0.1",
     "googleapis": "33.0.0",
     "jquery": "3.3.1",
     "moment": "^2.24.0",
@@ -47,6 +48,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ng-select2": "^1.0.8",
     "ngx-cookie-service": "^2.1.0",
+    "ngx-filesaver": "^2.2.1",
     "ngx-mat-select-search": "^1.6.0",
     "ngx-toastr": "^9.1.2",
     "ngx-uploader": "^7.1.0",
