--- a/bughound_webapp/package.json
+++ b/bughound_webapp/package.json
@@ -34,6 +34,7 @@
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.30.13",
     "angular2-moment": "^1.9.0",
+    "angular5-csv": "^0.2.11",
     "animate.css": "^3.7.0",
     "arrive": "2.4.1",
     "bootstrap": "3.3.7",
